# Sentiance

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  DATASET_CARD.md  Dockerfile  MODEL_CARD.md  PUBLISHING.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  __main__.py  config.py  main.py  routes.py  schemas.py  sentiment.py
deploy/: docker-compose.yml
docs/adr/: 0001-global-workspace-on-the-bus.md  0001-hexagonal-ports-and-adapters.md  0002-event-streaming-backbone.md  0002-functional-not-phenomenal.md  0003-cognition-behind-a-port.md  0003-windowed-feature-extraction.md  0004-privacy-and-consent.md  0004-self-sustaining-cognitive-cycle.md  0005-the-fused-mind.md
scripts/: eval_fused.py  finetune.py  finetune_fused.py  prepare_data.py  robustness_fused.py  train_fused.bat
sentiance/: __init__.py  __main__.py  app.py  characters.py  chat.py  live.py  scenarios.py  society.py  trace.py  world.py
sentiance/core/: __init__.py  config.py  dotenv.py  schemas.py  wiring.py
sentiance/core/bus/: __init__.py  base.py  kafka.py  memory.py
sentiance/core/repositories/: __init__.py  base.py  memory.py
sentiance/features/: __init__.py  extraction.py
sentiance/ingestion/: __init__.py  app.py  service.py
sentiance/insights/: __init__.py  app.py  service.py
sentiance/mind/: __init__.py  affect.py  anticipation.py  attention.py  cognition.py  conscience.py  consolidation.py  conversation.py  curiosity.py  dreaming.py  drives.py  embeddings.py  empathy.py  frustration.py  fused_model.py  goals.py  grief.py  imagination.py  local_model.py  memory.py  metacognition.py  mind.py  perception.py  persistence.py  relationships.py  self_model.py  state.py  state_vector.py  temperament.py  util.py  volition.py  workspace.py  world_model.py
sentiance/processing/: __init__.py  pipeline.py  worker.py
sentiance/recognition/: __init__.py  classifier.py  segmentation.py  transport.py
sentiance/simulation/: __init__.py  generator.py
sentiance/training/: __init__.py  dataset.py  fused_arch.py
tests/: conftest.py  test_anticipation.py  test_api.py  test_app.py  test_attachment.py  test_chat.py  test_classifier.py  test_cli.py  test_consolidation.py  test_conversation.py  test_curiosity.py  test_dotenv.py  test_dreaming.py  test_embeddings.py  test_empathy.py  test_faculties.py  test_features.py  test_frustration.py  test_goals.py  test_grief.py  test_imagination.py  test_ingestion.py  test_insights_api.py  test_insights_service.py  test_llm_cognition.py  test_metacognition.py  test_mind.py  test_ollama_cognition.py  test_persistence.py  test_pipeline.py  test_relationships.py  test_segmentation.py  test_self_conscious.py  test_sentiment.py  test_society.py  test_state_blind.py  test_state_vector.py  test_temperament.py  test_temperament_drift.py  test_trace.py  (+3 more)
