[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentiance"
version = "0.1.0"
description = "A behavioral-intelligence platform: smartphone sensor data to human-behavior insights."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Sentiance" }]
keywords = ["behavioral-intelligence", "sensor-fusion", "activity-recognition", "fastapi"]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "numpy>=1.26",
    "httpx>=0.27",
]

[project.optional-dependencies]
kafka = ["confluent-kafka>=2.3"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
sentiance = "sentiance.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sentiance*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --cov=sentiance --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.coverage.run]
branch = true
source = ["sentiance"]
