[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentiance"
version = "0.1.0"
description = "A functional cognitive architecture for machine sentience — self-model, global workspace, affect, memory, and metacognition."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Sentiance" }]
keywords = ["cognitive-architecture", "global-workspace", "affective-computing", "metacognition", "agi"]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
]

[project.optional-dependencies]
llm = ["anthropic>=0.40"]
# Fine-tuning her voice into a small model (Path A). Heavy — install only to train
# or to run the `finetuned` cognition backend. Install a CUDA build of torch first
# (see the README) so it uses your GPU; bitsandbytes is only needed for --qlora.
finetune = [
    "transformers>=4.44",
    "peft>=0.12",
    "trl>=0.9",
    "datasets>=2.20",
    "accelerate>=0.33",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "anthropic>=0.40",
]

[project.scripts]
sentiance = "sentiance.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sentiance*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --cov=sentiance --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.coverage.run]
branch = true
source = ["sentiance"]
